--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <div class="container">
         <div class="section-header">
           <h2 class="section-title">
-            Why Choose <span class="text-primary">FoodDash</span>
+            Why Choose <span class="text-primary">FreshBox</span>
           </h2>
           <p class="section-description">
             We're committed to providing the best food delivery experience with
@@ -331,7 +331,7 @@
                   <path d="M21 15V2v0a5 5 0 0 0-5 5v6c0 1.1.9 2 2 2h3Zm0 0v7" />
                 </svg>
               </div>
-              <span class="logo-text">FoodDash</span>
+              <span class="logo-text">FreshBox</span>
             </div>
             <p class="footer-description">
               Delivering happiness, one meal at a time. Fresh, fast, and
@@ -412,7 +412,7 @@
                   <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z" />
                   <circle cx="12" cy="10" r="3" />
                 </svg>
-                <span>123 Food Street, Culinary City</span>
+                <span>Av Dr. Pedro A. Columna. street Alborada</span>
               </li>
               <li>
                 <svg
@@ -426,7 +426,7 @@
                   <path
                     d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
                 </svg>
-                <span>+1 (555) 123-4567</span>
+                <span>+1 (829) 767-1171</span>
               </li>
               <li>
                 <svg
@@ -441,14 +441,14 @@
                     d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
                   <polyline points="22,6 12,13 2,6" />
                 </svg>
-                <span>hello@fooddash.com</span>
+                <span>delossantosedisson@gmail.com</span>
               </li>
             </ul>
           </div>
         </div>
 
         <div class="footer-bottom">
-          <p>&copy; 2024 FoodDash. All rights reserved.</p>
+          <p>&copy; 2024 FreshBox. All rights reserved.</p>
         </div>
       </div>
     </footer>
