--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet" />
     <link rel="shortcut icon" href="img (2).jpeg" as="style" />
   </head>
-  <body>
+  <body id="body">
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
       <div class="container navbar-container">
@@ -457,7 +457,7 @@
     <div id="productPanel" class="panel-overlay" onclick="closeProductPanel()">
       <div class="panel" onclick="event.stopPropagation()">
         <button
-          style="top: 0.3rem"
+          style="top: 0.5rem"
           class="panel-close"
           id="panel-close"
           onclick="closeProductPanel()">
